Adjust build settings for speedier re-builds; Reorganize package.json

--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -2,55 +2,61 @@
   "name": "turn10-steward-ui",
   "version": "0.0.1",
   "scripts": {
-    "refreshVSToken": "vsts-npm-auth -config .npmrc -F",
-    "ng": "ng",
-    "fix": "yarn prettier:fix && yarn lint --fix",
-    "lint": "ng lint",
-    "eslint": "eslint -c ./.eslintrc.js --ext .ts,.html ./**/*.ts",
-    "find:missing_no_errors_schema": "grep -rn -C 0 --include \\*.component.spec.ts -L \"\\[NO_ERRORS_SCHEMA\\]\" ./src/*",
-    "prettier:fix": "prettier --write .",
-    "changes-with-main": "git diff-tree --no-commit-id --name-status -r HEAD main",
-    "check:prettier": "prettier --check .",
-    "check:changelog-is-modified": "C:\\Windows\\system32\\bash.exe ./scripts/changelog-is-modified-or-fail.sh",
-    "check:ado:changelog-is-modified": "bash ./scripts/changelog-is-modified-or-fail.sh",
-    "zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
-    "debug-open:ff": "\"C:\\Program Files\\Firefox Developer Edition\\firefox.exe\" -start-debugger-server",
+    "auth": "vsts-npm-auth -config .npmrc",
+    "auth:force": "vsts-npm-auth -config .npmrc -F",
+
     "start": "yarn run start:dev",
     "start:local": "ng serve",
     "start:dev": "ng serve --configuration=dev-api",
+    "start:dev:optimized": "ng serve --configuration=dev-api-optimized",
     "start:prod": "ng serve --configuration=prod-api",
-    "start:local-api": "yarn run start:local",
-    "start:prod-api": "yarn run start:prod",
-    "start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
-    "test:prepare": "find src -name '*.scss' -print0 | xargs -0 -I {} bash -c 'cp -f empty.not-scss {}'",
-    "test:prepare:add": "git add * && git reset *.scss",
-    "test:prepare:reset": "git restore *.scss",
+    "start:prod:optimized": "ng serve --configuration=prod-api-optimized",
+
+    "ng": "ng",
+    "lint": "ng lint",
+    "lint:fix": "yarn prettier:fix && yarn lint --fix",
+    "prettier:fix": "prettier --write .",
+    
+    
+    "build:check:prettier": "prettier --check .",
+    "build:check:changelog-is-modified": "C:\\Windows\\system32\\bash.exe ./scripts/changelog-is-modified-or-fail.sh",
+    "build:check:ado:changelog-is-modified": "bash ./scripts/changelog-is-modified-or-fail.sh",
+    
+    "build": "yarn run build:dev",
+    "build:dev": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev --crossOrigin=anonymous && yarn run build:configMoveToBuild",
+    "build:configMoveToBuild": "cp web.config dist/",
+    "build:prod": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=production --crossOrigin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
+
     "test:cc": "ng test --karma-config=src/karma-coverage.conf.js --source-map=true --code-coverage",
     "test:chrome": "ng test --karma-config=src/karma.conf.js --source-map=true",
     "test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
     "test:ado": "ng test --karma-config=src/karma-ado.conf.js --code-coverage --watch false",
     "test:ado:ncc": "ng test --karma-config=src/karma-ado.conf.js",
-    "test:ado:cypress:dev": "cypress run --config-file cypress/configs/dev.json",
-    "test:ado:cypress:prod-staging": "cypress run --config-file cypress/configs/prod-staging.json",
-    "test:ado:cypress:prod": "cypress run --config-file cypress/configs/prod.json",
-    "test:cypress:start": "concurrently \"yarn start\" \"yarn test:cypress\"",
-    "test:cypress": "cypress open --config-file cypress/configs/localhost.json",
-    "test:cypress:local": "cypress open --config-file cypress/configs/localhost.json",
-    "test:cypress:local-dev": "cypress open --config-file cypress/configs/localhost-dev.json",
-    "test:cypress:dev": "cypress open --config-file cypress/configs/dev.json",
-    "test:cypress:prod": "cypress open --config-file cypress/configs/prod.json",
-    "test:cypress:prod-staging": "cypress open --config-file cypress/configs/prod-staging.json",
-    "build": "yarn run build:dev",
-    "build:dev": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev --crossOrigin=anonymous && yarn run build:dev:configMoveToBuild",
-    "build:dev:old": "(ng build --configuration=dev --crossOrigin=anonymous) && yarn run build:dev:configMoveToBuild",
-    "build:dev:configMoveToBuild": "cp web.config dist/",
-    "build:prod": "(ng build --configuration=production --crossOrigin=anonymous --subresource-integrity=true) && yarn run build:dev:configMoveToBuild",
+
+    "_old-commands-below": "echo Try another command.",
+    "test:prepare": "find src -name '*.scss' -print0 | xargs -0 -I {} bash -c 'cp -f empty.not-scss {}'",
+    "test:prepare:add": "git add * && git reset *.scss",
+    "test:prepare:reset": "git restore *.scss",
+    "eslint": "eslint -c ./.eslintrc.js --ext .ts,.html ./**/*.ts",
+    "find:missing_no_errors_schema": "grep -rn -C 0 --include \\*.component.spec.ts -L \"\\[NO_ERRORS_SCHEMA\\]\" ./src/*",
+    "changes-with-main": "git diff-tree --no-commit-id --name-status -r HEAD main",
+    "zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
+    "debug-open:ff": "\"C:\\Program Files\\Firefox Developer Edition\\firefox.exe\" -start-debugger-server",
+    "start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
+
     "open:navbar": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true",
     "open:ticket:fm7": "start https://forzasupport1570048282.zendesk.com/agent/tickets/60?zat=true",
     "open:ticket:fh3": "start https://forzasupport1570048282.zendesk.com/agent/tickets/61?zat=true",
     "open:ticket:fh4": "start https://forzasupport1570048282.zendesk.com/agent/tickets/58?zat=true",
     "open:ticket:fh4:bad": "start https://forzasupport1570048282.zendesk.com/agent/tickets/62?zat=true",
-    "open:ticket:fh5": "start https://forzasupport1570048282.zendesk.com/agent/tickets/68?zat=true"
+    "open:ticket:fh5": "start https://forzasupport1570048282.zendesk.com/agent/tickets/68?zat=true",
+
+    "_old-aliases-below": "echo Try another command.",
+    "refreshVSToken": "yarn run auth:force",
+    "fix": "yarn run lint:fix",
+    "check:prettier": "yarn run build:check:prettier",
+    "check:changelog-is-modified": "yarn run build:check:changelog-is-modified",
+    "check:ado:changelog-is-modified": "yarn run build:check:ado:changelog-is-modified"
   },
   "private": true,
   "dependencies": {
