--- a/packages/StewardApi/StewardApi/StewardApi.csproj
+++ b/packages/StewardApi/StewardApi/StewardApi.csproj
@@ -108,6 +108,7 @@
     </PackageReference>
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.4.0" />
+	<PackageReference Include="System.Diagnostics.DiagnosticSource" Version="7.0.2" />
 	<PackageReference Include="System.Text.Encodings.Web" Version="5.0.1" />
     <PackageReference Include="Turn10.Data.SecretProvider" Version="3.0.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
@@ -115,7 +116,7 @@
     <PackageReference Include="Turn10.Data.Common" Version="2.1.0" />
     <PackageReference Include="Turn10.Data.KustoLogger" Version="4.0.0" />
     <PackageReference Include="Turn10.Services.CMSRetrieval" Version="2.0.0" />
-    <PackageReference Include="Turn10.Services.ForzaClient" Version="3.1.0" />
+    <PackageReference Include="Turn10.Services.ForzaClient" Version="4.1.0" />
     <PackageReference Include="Turn10.Services.ForzaClient.FH3" Version="1.3.0">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
@@ -126,14 +127,14 @@
     <PackageReference Include="Turn10.Services.ForzaClient.FM7" Version="2.13.5">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
-    <PackageReference Include="Turn10.Services.ForzaClient.FM8" Version="2.21.1">
+    <PackageReference Include="Turn10.Services.ForzaClient.FM8" Version="2.21.3">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
     <PackageReference Include="Turn10.Services.ForzaClient.FMG" Version="1.0.4">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
-    <PackageReference Include="Turn10.Services.Serialization" Version="1.3.1" />
-    <PackageReference Include="Turn10.Services.ServiceClient" Version="1.2.5" />
+    <PackageReference Include="Turn10.Services.Serialization" Version="1.4.0" />
+    <PackageReference Include="Turn10.Services.ServiceClient" Version="2.5.0" />
     <PackageReference Include="Turn10.Services.Storage.Table" Version="1.2.0" />
     <PackageReference Include="Turn10.Services.STS.Contracts" Version="1.2.0">
       <NoWarn>NU1701</NoWarn>
