--- a/packages/StewardApi/StewardApi/StewardApi.csproj
+++ b/packages/StewardApi/StewardApi/StewardApi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <!-- <Nullable>enable</Nullable> -->
     <AssemblyName>Turn10.LiveOps.StewardApi</AssemblyName>
@@ -134,9 +134,9 @@
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
     <PackageReference Include="Turn10.Services.Serialization" Version="1.4.0" />
-    <PackageReference Include="Turn10.Services.ServiceClient" Version="2.5.0" />
+    <PackageReference Include="Turn10.Services.ServiceClient" Version="2.6.0" />
     <PackageReference Include="Turn10.Services.Storage.Table" Version="1.2.0" />
-    <PackageReference Include="Turn10.Services.STS.Contracts" Version="2.1.0">
+    <PackageReference Include="Turn10.Services.STS.Contracts" Version="2.2.0-CI-20230718-225519">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
     <PackageReference Include="Turn10.Services.UGC.Contracts" Version="2.7.1" />
