--- a/packages/StewardClient-Cypress/package.json
+++ b/packages/StewardClient-Cypress/package.json
@@ -27,14 +27,22 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "cypress": "^12.17.1",
     "cypress-multi-reporters": "^1.6.3",
     "cypress-parallel": "^0.13.0",
     "cypress-real-events": "^1.8.1",
     "cypress-wait-until": "^2.0.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsdoc": "^46.4.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "luxon": "^2.5.2",
     "prettier": "^3.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^4.6.2"
   },
   "browserslist": [
     "> 0.5%",
