--- a/packages/StewardClient-Cypress/.prettierignore
+++ b/packages/StewardClient-Cypress/.prettierignore
@@ -4,3 +4,5 @@ package-lock.json
 src/app/shared/interceptors/fake-api/utility/fake-image-byte-array.ts
 .angular/
 package.json
+.eslintrc.js
+*config.json
