--- a/packages/StewardClient-Cypress/package.json
+++ b/packages/StewardClient-Cypress/package.json
@@ -4,22 +4,18 @@
   "scripts": {
     "auth": "vsts-npm-auth -config .npmrc",
     "auth:force": "vsts-npm-auth -config .npmrc -F",
-    
     "lint": "yarn run build:check:eslint && yarn run build:check:prettier",
     "lint:fix": "yarn lint:fix:prettier && yarn lint:fix:eslint",
     "lint:fix:prettier": "prettier --write .",
     "lint:fix:eslint": "yarn eslint --fix",
-
     "config": "yarn run config:cypress",
     "config:cypress": "bash ./scripts/make-cypress-env.sh",
-
     "open": "cypress open --config-file cypress/configs/localhost.config.ts",
     "open:local": "cypress open --config-file cypress/configs/localhost.config.ts",
     "open:local-dev": "cypress open --config-file cypress/configs/localhost-dev.config.ts",
     "open:dev": "cypress open --config-file cypress/configs/dev.config.ts",
     "open:prod": "cypress open --config-file cypress/configs/prod.config.ts",
     "open:prod-staging": "cypress open --config-file cypress/configs/prod-staging.config.ts",
-
     "run": "cypress run --config-file cypress/configs/localhost.config.ts",
     "run:local": "cypress run --config-file cypress/configs/localhost.config.ts",
     "run:local-dev": "cypress run --config-file cypress/configs/localhost-dev.config.ts",
@@ -27,16 +23,16 @@
     "run:prod": "cypress run --config-file cypress/configs/prod.config.ts",
     "run:prod-staging": "cypress run --config-file cypress/configs/prod-staging.config.ts",
     "run:dev:parallel": "cypress-parallel -s run:dev -t 4 -d cypress/e2e",
-    
     "build:check:eslint": "yarn run eslint",
     "build:check:prettier": "prettier --check .",
-    
     "_old-commands-below": "echo Try another command.",
     "eslint": "eslint -c ./.eslintrc.js --ext .ts,.html ./**/*.ts",
     "prettier:fix": "yarn run lint:fix:prettier"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^20.4.3"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/eslint-plugin-tslint": "^6.1.0",
