--- a/packages/StewardClient-Cypress/tsconfig.json
+++ b/packages/StewardClient-Cypress/tsconfig.json
@@ -1,37 +1,15 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "downlevelIteration": true,
-    "baseUrl": "src",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2015",
-    "module": "esnext",
-    "types": ["node", "jasmine"],
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom", "dom.iterable"],
+    "target": "es5",
+    "lib": ["es5", "dom"],
+    "types": ["cypress", "node", "cypress-wait-until"],
+    "baseUrl": ".",
     "paths": {
-      "@environments/*": ["environments/*"],
-      "@components/*": ["app/shared/components/*"],
-      "@helpers/*": ["app/shared/helpers/*"],
-      "@interceptors/*": ["app/shared/interceptors/*"],
-      "@mocks/*": ["app/shared/mocks/*"],
-      "@models/*": ["app/shared/models/*"],
-      "@views/*": ["app/shared/views/*"],
-      "@services/*": ["app/shared/services/*"],
-      "@shared/*": ["app/shared/*"],
-      "@tools-app/*": ["app/pages/tools/*"]
+      "@fixtures/*": ["cypress/fixtures/*"],
+      "@plugins/*": ["cypress/plugins/*"],
+      "@support/*": ["cypress/support/*"],
+      "@cypress/*": ["cypress/*"]
     },
-    "allowSyntheticDefaultImports": true
   },
-  "angularCompilerOptions": {
-    "strictTemplates": true,
-    "strictInjectionParameters": true
-  },
-  "include": ["src", "node_modules/cypress"],
-  "exclude": ["node_modules/cypress"]
+  "include": ["cypress/**/*.ts"]
 }
