--- a/packages/StewardClient-Cypress/tsconfig.json
+++ b/packages/StewardClient-Cypress/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "node", "cypress-wait-until"],
     "baseUrl": ".",
+    "outDir": "./dist/",
     "paths": {
       "@fixtures/*": ["cypress/fixtures/*"],
       "@plugins/*": ["cypress/plugins/*"],
