--- a/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
+++ b/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
@@ -1,6 +1,6 @@
 jobs:
 - job: Job_2
-  displayName: Cypress (Lint)
+  displayName: Cypress (Execute Changed Tests)
   pool:
     vmImage: ubuntu-20.04
 
