--- a/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
+++ b/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
@@ -47,5 +47,7 @@ jobs:
     displayName: Execute Changed Specs
     condition: succeededOrFailed()
     inputs:
-      script: ./scripts/execute-changed-specs.sh
+      script: >-
+        chmod +x ./scripts/execute-changed-specs.sh
+        ./scripts/execute-changed-specs.sh
       workingDirectory: packages/StewardClient-Cypress/
