--- a/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
+++ b/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
@@ -47,7 +47,7 @@ jobs:
     displayName: Execute Changed Specs
     condition: succeededOrFailed()
     inputs:
-      script: >-
+      script: >
         chmod +x ./scripts/execute-changed-specs.sh
         ./scripts/execute-changed-specs.sh
       workingDirectory: packages/StewardClient-Cypress/
