--- a/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
+++ b/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
@@ -43,9 +43,20 @@ jobs:
       script: yarn --frozen-lockfile --network-timeout 1000000
       workingDirectory: packages/StewardClient-Cypress/
 
+  - task: AzureKeyVault@2
+    displayName: 'Azure Key Vault: steward-keyvault-dev'
+    enabled: False
+    inputs:
+      ConnectedServiceName: 601c0bc2-7049-4ec7-a48a-76a014ebeab2
+      KeyVaultName: steward-keyvault-dev
+      SecretsFilter: aad-auth-client-secret
+
   - task: CmdLine@2
     displayName: Execute Changed Specs
     condition: succeededOrFailed()
+    env:
+      CYPRESS_DEV_CLIENT_SECRET: $(aad-auth-client-secret)
+      CYPRESS_DEV_CLIENT_ID: 'cfe0ac3f-d0a7-4566-99f7-0c56b7a9f7d4'
     inputs:
       script: chmod +x ./scripts/execute-changed-specs.sh && ./scripts/execute-changed-specs.sh
       workingDirectory: packages/StewardClient-Cypress/
