--- a/steward-pr-ui-verify.yml
+++ b/steward-pr-ui-verify.yml
@@ -7,6 +7,12 @@ stages:
 - stage: UI_Prepare_Directory
   displayName: Prepare Directory (UI)
   jobs:
-  - template: infra/azure-pipelines/node/prepare-ui.template.yml
+  - template: infra/azure-pipelines/node/stage-prepare-ui.template.yml
+    parameters:
+      workingDirectory: packages/StewardClient
+- stage: UI_Test
+  displayName: Test (UI)
+  jobs:
+  - template: infra/azure-pipelines/node/stage-test-ui.template.yml
     parameters:
       workingDirectory: packages/StewardClient
