--- a/steward-all-ci-2.yml
+++ b/steward-all-ci-2.yml
@@ -2,10 +2,10 @@
 # Variable 'DEV_CLIENT_ID' was defined in the Variables tab
 # Variable 'PROD_CLIENT_ID' was defined in the Variables tab
 trigger:
-  branches:
-    include:
-    - refs/heads/main
+  - main
+
 name: $(date:yyyyMMdd)$(rev:.r)_$(SourceBranchName)
+
 jobs:
 - template: infra/azure-pipelines/original-ci-angular-build-dev.template.yml
 - template: infra/azure-pipelines/original-ci-angular-build-prod.template.yml
