--- a/steward-pr-ui-verify.yml
+++ b/steward-pr-ui-verify.yml
@@ -1,7 +1,12 @@
+trigger: none
+
 name: $(date:yyyyMMdd)$(rev:.r)_$(SourceBranchName)
 
 variables:
   - template: 'infra/azure-pipelines/node/ui-variables.yml'
+
+pool:
+  vmImage: ubuntu-20.04
 
 stages:
 - stage: UI_Prepare_Directory
