--- a/infra/azure-pipelines/node/job-ui-test-unit.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-unit.template.yml
@@ -4,36 +4,38 @@ parameters:
     type: string
 
 jobs:
-- job: UI_Test_Lint
-  displayName: Lint
-  pool:
-    vmImage: ubuntu-20.04
+
+- job: UI_Test_Run_Unit_Tests
+  displayName: Unit Test
   steps:
-  - template: load-yarn-project.template.yml
+  - template: prepare-yarn-project.template.yml
     parameters:
       workingDirectory: ${{parameters.workingDirectory}}
-      dropName: ui
-  - task: Bash@3
-    displayName: Lint Check
-    inputs:
-      workingDirectory: ${{parameters.workingDirectory}}
-      targetType: 'inline'
-      script: yarn run lint
-- job: UI_Test_Prettier
-  displayName: Prettier
-  pool:
-    vmImage: ubuntu-20.04
-  steps:
-  - template: load-yarn-project.template.yml
-    parameters:
-      workingDirectory: ${{parameters.workingDirectory}}
-      dropName: ui
   - task: Bash@3
     displayName: Prettier Check
     inputs:
       workingDirectory: ${{parameters.workingDirectory}}
       targetType: 'inline'
-      script: yarn run prettier:check
+      script: yarn run test:ado --code-coverage
+      
+  - task: PublishTestResults@2
+    displayName: Publish Test Results
+    condition: succeededOrFailed()
+    continueOnError: True
+    inputs:
+      testResultsFiles: '**/TESTS-Chrome_Headless_*.xml'
+      mergeTestResults: true
+      failTaskOnFailedTests: true
+
+  - task: PublishCodeCoverageResults@1
+    displayName: Publish Code Coverage
+    condition: succeededOrFailed()
+    continueOnError: True
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: $(System.DefaultWorkingDirectory)/**/*coverage.xml
+      reportDirectory: $(System.DefaultWorkingDirectory)/**/coverage
+      failIfCoverageEmpty: true
   # - task: CmdLine@2
   #   displayName: Tests & Code Coverage
   #   inputs:
