--- a/infra/azure-pipelines/node/job-ui-test-lint.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-lint.template.yml
@@ -1,13 +1,13 @@
 parameters:
-  - name: 'workingDirectory'
-    displayName: 'Path to a working directory where yarn can be run. Like packages/StewardClient'
-    type: string
+- name: 'dropName'
+  displayName: "Name of the intermediate drop. Like 'prepare-ui-drop'."
+  type: string
 
 jobs:
 - job: UI_Test_Lint
   displayName: Lint
-  pool:
-    vmImage: ubuntu-20.04
+  variables:
+    dropPath: $(Pipeline.Workspace)/drop/${{parameters.dropName}}
   steps:
   - template: prepare-yarn-project.template.yml
     parameters:
