--- a/infra/azure-pipelines/node/job-ui-test-prettier.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-prettier.template.yml
@@ -11,10 +11,10 @@ jobs:
   steps:
   - template: prepare-yarn-project.template.yml
     parameters:
-      workingDirectory: ${{dropPath}}
+      workingDirectory: $(dropPath)
   - task: Bash@3
     displayName: Prettier Check
     inputs:
-      workingDirectory: ${{dropPath}}
+      workingDirectory: $(dropPath)
       targetType: 'inline'
       script: yarn run build:check:prettier
