--- a/steward-pr-ui-verify.yml
+++ b/steward-pr-ui-verify.yml
@@ -15,10 +15,10 @@ stages:
   - template: infra/azure-pipelines/node/stage-prepare-ui.template.yml
     parameters:
       workingDirectory: packages/StewardClient
-      dropName: $(DROP_NAME)
+      dropName: $DROP_NAME
 - stage: UI_Test
   displayName: Test (UI)
   jobs:
   - template: infra/azure-pipelines/node/stage-verify-ui.template.yml
     parameters:
-      dropName: $(DROP_NAME)
+      dropName: $DROP_NAME
