--- a/steward-pr-ui-verify.yml
+++ b/steward-pr-ui-verify.yml
@@ -16,9 +16,10 @@ stages:
     parameters:
       workingDirectory: packages/StewardClient
       dropName: ui-drop
-- stage: UI_Test
-  displayName: Test (UI)
-  jobs:
-  - template: infra/azure-pipelines/node/stage-verify-ui.template.yml
-    parameters:
-      dropName: ui-drop
+
+# - stage: UI_Test
+#   displayName: Test (UI)
+#   jobs:
+#   - template: infra/azure-pipelines/node/stage-verify-ui.template.yml
+#     parameters:
+#       dropName: ui-drop
