--- a/infra/azure-pipelines/node/job-ui-test-lint.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-lint.template.yml
@@ -9,9 +9,9 @@ jobs:
   variables:
     dropPath: $(Pipeline.Workspace)/drop/${{parameters.dropName}}
   steps:
-  - template: prepare-yarn-project.template.yml
+  - template: load-yarn-project.template.yml
     parameters:
-      workingDirectory: $(dropPath)
+      dropName: ${{parameters.dropName}}
   - task: Bash@3
     displayName: Lint Check
     inputs:
