--- a/infra/azure-pipelines/node/job-ui-test-build.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-build.template.yml
@@ -7,7 +7,7 @@ jobs:
 - job: UI_Test_Build
   displayName: Build
   variables:
-    dropPath: $(Pipeline.Workspace)/drop/${{parameters.dropName}}
+    dropPath: $(Pipeline.Workspace)/${{parameters.dropName}}
   steps:
   - template: load-yarn-project.template.yml
     parameters:
