--- a/infra/azure-pipelines/node/prepare-yarn-project.template.yml
+++ b/infra/azure-pipelines/node/prepare-yarn-project.template.yml
@@ -38,7 +38,7 @@ steps:
   inputs:
     workingDirectory: ${{parameters.workingDirectory}}
     targetType: 'inline'
-    script: >
+    script: |
       echo Node Version: $(node -v)
       echo Yarn Version: $(yarn -v)
       echo Angular Versions:
