--- a/infra/azure-pipelines/node/job-ui-test-unit.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-unit.template.yml
@@ -17,7 +17,7 @@ jobs:
     inputs:
       workingDirectory: $(dropPath)
       targetType: 'inline'
-      script: >
+      script: |
         yarn run test:prepare
         yarn run test:ado
       
