--- a/infra/azure-pipelines/node/stage-prepare-ui.template.yml
+++ b/infra/azure-pipelines/node/stage-prepare-ui.template.yml
@@ -11,6 +11,7 @@ jobs:
   displayName: Angular UI (Prepare)
   steps:
   - checkout: self
+    fetchDepth: 1
     submodules: true
   - template: prepare-yarn-project.template.yml
     parameters:
