--- a/infra/azure-pipelines/original-ci-api-build.template.yml
+++ b/infra/azure-pipelines/original-ci-api-build.template.yml
@@ -5,6 +5,7 @@ jobs:
     vmImage: ubuntu-20.04
   steps:
   - checkout: self
+    fetchDepth: 1
     submodules: true
   - task: Assembly-Info-NetCore@2
     displayName: Set Assembly Version
